# Saber-Translator

./: AGENTS.md  pyproject.toml
.sisyphus/notepads/batch-upload-chapters/: learnings.md
.sisyphus/plans/: batch-upload-chapters.md
src/app/: AGENTS.md
src/app/static/vue/: index.html
src/app/static/vue/assets/: BookshelfView.Cz6Bsbeh.css  InsightView.wCprB1-8.css  TranslateView.zmEnRc1D.css
src/app/static/vue/js/: AppHeader.1HI8x28X.js  BookshelfView.B603rNml.js  InsightView.9dH17uT6.js  ReaderView.C-fCVf4_.js  TranslateView._h6XixGE.js  bookshelf.CmYTglJX.js  bookshelfStore.DeJnGgoE.js  bubbleStore.BzOtG4qD.js  index.ycTnNszf.js  pageStorage.O2nlyn8-.js  sessionStore.o4BIuzop.js
src/core/: AGENTS.md
src/core/manga_insight/: AGENTS.md
src/interfaces/: AGENTS.md
vue-frontend/: AGENTS.md  pnpm-lock.yaml
vue-frontend/src/components/bookshelf/: BookDetailModal.vue
vue-frontend/src/composables/: useBatchChapterUpload.ts  useTextStyleSync.ts
vue-frontend/src/stores/: sessionStore.ts
vue-frontend/src/stores/settings/: index.ts
vue-frontend/src/stores/settings/modules/: misc.ts
