[project]
name = "saber-translator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.4.0",
    "dill>=0.4.1",
    "edge-tts>=6.1.0",
    "einops>=0.8.2",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "freetype-py>=2.5.1",
    "gallery-dl>=1.26.0",
    "httpx[http2]>=0.25.0",
    "litelama>=0.1.7",
    "manga-ocr>=0.1.14",
    "mobi>=0.4.0",
    "networkx>=3.6.1",
    "openai>=2.32.0",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "pyclipper>=1.4.0",
    "pyinstaller>=6.19.0",
    "pymupdf>=1.23.0",
    "pyyaml>=6.0.3",
    "rapidocr-onnxruntime>=1.4.4",
    "requests>=2.33.1",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "shapely>=2.1.2",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers==4.55.0",
    "ultralytics>=8.4.38",
]
